# mcadjoint

./: .gitignore  .gitmodules  README.md
Code/: CMakeLists.txt  control.cpp  control.h  driverBurger.cpp  gnuPlotSetTerminal.cpp  gnuPlotSetTerminal.hpp  main.cpp  problemSelection.cpp  problemSelection.hpp  randomgeneral.h  sparseDataSelection.cpp  sparseDataSelection.hpp  utils.hpp
Code/BurgersProblem/: CMakeLists.txt  adjointMCBurgersBetter.m2v  control  control.cpp  driver.h  driverBurger.cpp  gnuPlotSetTerminal.cpp  gnuplot_i.cpp  gnuplot_i.h  out  slowerAdjointMC.avi
Code/OilProblem/: CMakeLists.txt  FindMKL.cmake  adjoint.cpp  adjoint.hpp  adjointOptions.hpp  adjointState.hpp  antitheticOptions.hpp  bVectorSurrogate.hpp  cMatrixSurrogate.hpp  cellindex.hpp  darcyVelocity.cpp  darcyVelocity.hpp  darcyVelocityInternal.hpp  derivativesForAdjoint.cpp  derivativesForAdjoint.hpp  derivativesForAdjointFD.cpp  derivativesForAdjointFD.hpp  derivativesForAdjointTest.cpp  dryRun.cpp  dumpToMatFile.cpp  dumpToMatFile.hpp  fast_discrete_distribution.hpp  fixedParameters.hpp  forward.cpp  forward.hpp  forwardOptions.hpp  logging.cpp  logging.hpp  main.cpp  minimizationState.hpp  minimizer.cpp  minimizer.hpp  oilProblem.hpp  oilproblem.cpp  oilproblem.hpp  pickAnIndex.cpp  pickAnIndex.hpp  preconditioning.cpp  preconditioning.hpp  preconditioningOptions.hpp  (+22 more)
Code/original/: README.md  control  control.cpp  control.h  driver.h  driverBurger.cpp  main.cpp  out  randomgeneral.h
Documents/: DerivativesForMCAdjoint.nb
Miniposter/: Miniposter.pptx
Presentation/: AdjointJ11.xcf  AdjointJ21xcf.xcf  Presentation AdjointMC.pptx  mctrad5.fig  mctrad50.fig  slowerAdjointMC.m2v  slowerAdjointMCBetter.m2v  ~$Presentation AdjointMC.pptx
Report/: .gitignore  Zusammenfassung.md  bare_conf.tex  references.bib  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  whyCodeDoesn'tConverge.fig  whyCodeDoesn'tConverge.mat
Run/: P t=0.0167718 n=200.fig  S_w t=0.0167718 n=200.fig  control  fieldsQuarterFiveSpot.mat  fieldsQuarterFiveSpotAdjoint.mat  jz6230  out  satWater.mat
